# tenet

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  spec.md
.context/invariants/: keep-generated-files-in-sync.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/cmd/: add.rs  compile.rs  edit.rs  init.rs  lint.rs  list.rs  migrate.rs  mod.rs  review.rs  show.rs  stale.rs
src/compile/: marker.rs  mod.rs  plan.rs  render.rs
src/hook/: mod.rs  pre_commit.sh
src/lint/: mod.rs  rules.rs  secrets.rs
src/rule/: frontmatter.rs  id.rs  mod.rs  scope.rs
src/util/: atomic_write.rs  mod.rs  paths.rs
tests/: add_test.rs  cli_step1_test.rs  compile_nested_test.rs  compile_stale_test.rs  compile_test.rs  conflict_handwritten_test.rs  hook_test.rs  init_test.rs  lint_test.rs  marker_detection_test.rs  migrate_test.rs  review_show_test.rs
